--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -1,27 +1,23 @@
-# Use Node.js base image
-FROM node:18
+FROM node:18-alpine
 
-# Set working directory
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
-COPY client/package*.json ./client/
 COPY server/package*.json ./server/
 
 # Install dependencies
 RUN npm install
-RUN cd client && npm install
 RUN cd server && npm install
 
-# Copy app source
+# Copy source code
 COPY . .
 
 # Build React app
-RUN cd client && npm run build
+RUN npm run build
 
 # Expose port
-EXPOSE 3000
+EXPOSE 3001
 
 # Start command
 CMD ["npm", "start"]
