--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,8 +2,8 @@
     "name": "my-app",
     "version": "1.0.0",
     "scripts": {
-      "start": "cd server && npm start",
-      "build": "cd client && npm run build",
+    "start": "cd server && node index.js",
+    "build": "react-scripts build"
       "install-all": "npm install && cd client && npm install && cd ../server && npm install"
     }
   }
