--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "scripts": {
     "start": "cd server && node index.js",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
       "install-all": "npm install && cd client && npm install && cd ../server && npm install"
     }
   }
