--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -1,25 +1,24 @@
 # Build the client app
-FROM node:18 as build-stage
+FROM node:18 AS build-stage
 WORKDIR /app
-# Copy package.json first to leverage caching
+# Copy client package.json and install dependencies
 COPY client/package.json ./client/
-# Install client dependencies
 RUN cd client && npm install
-# Copy the rest of the client files and build
+# Copy all client files and build the React app
 COPY client ./client
 RUN cd client && npm run build
 
 # Set up the Node.js server
-FROM node:18 as production-stage
+FROM node:18 AS production-stage
 WORKDIR /app
 # Set the environment to production
 ENV NODE_ENV=production
 # Copy server package.json and install dependencies
 COPY server/package.json ./server/
 RUN cd server && npm install
-# Copy the server files
+# Copy all server files
 COPY server ./server
-# Copy the built client files to the public folder
+# Copy the built client files to the server's public folder
 COPY --from=build-stage /app/client/build ./server/public
 
 # Expose the server port
